--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     android:background="@color/yellow"
     tools:context=".login.LoginActivity">
 
@@ -24,9 +23,9 @@
         android:layout_weight="2"
         android:background="@drawable/login_rectangle"
         android:orientation="vertical"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPager">
 
@@ -64,7 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginBottom="24dp"
+
+            android:layout_marginBottom="16dp"
             android:text="@string/forget_pass"
             android:textColor="@color/blue" />
 
@@ -79,6 +79,7 @@
             android:textColor="@color/white" />
 
         <TextView
+            android:id="@+id/have_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
