--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,35 +1,35 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/yellow"
-    android:padding="16dp"
     tools:context=".onboarding.OnboardingActivity">
 
     <TextView
         android:id="@+id/tvWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to"
+        android:text="@string/welcome"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="@color/black"
+        android:layout_marginTop="32dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"/>
+        />
 
     <TextView
         android:id="@+id/tvAppname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EmotiCare"
+        android:text="@string/app_name"
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/blue"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="2dp"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
