--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     android:background="@color/yellow"
     tools:context=".register.RegisterActivity">
 
@@ -18,15 +17,15 @@
         android:scaleType="centerInside"/>
 
     <LinearLayout
-        android:layout_width="363dp"
+        android:layout_width="match_parent"
         android:layout_height="338dp"
-        android:layout_gravity="center"
+        android:layout_gravity="end"
         android:layout_weight="2"
+        android:padding="16dp"
         android:background="@drawable/login_rectangle"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPager">
 
