--- a/app/src/main/res/layout/activity_splash_activty.xml
+++ b/app/src/main/res/layout/activity_splash_activty.xml
@@ -5,12 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".splash.SplashActivty">
 
     <ImageView
         android:id="@+id/splashscreenIV"
-        android:layout_width="206dp"
-        android:layout_height="185dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
