--- a/app/src/main/res/layout/item_message_sent.xml
+++ b/app/src/main/res/layout/item_message_sent.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
-
     <TextView
         android:id="@+id/messageTextView"
         android:layout_width="300dp"
@@ -12,5 +11,6 @@
         android:background="@drawable/chat_bubble"
         android:padding="10dp"
         android:textColor="@color/black"
+        android:layout_gravity="end"
         android:textSize="16sp" />
 </FrameLayout>
