--- a/app/src/main/res/layout/item_message_sent.xml
+++ b/app/src/main/res/layout/item_message_sent.xml
@@ -5,11 +5,13 @@
     android:padding="8dp">
     <TextView
         android:id="@+id/messageTextView"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:maxWidth="300dp"
         android:background="@drawable/chat_bubble"
-        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:textColor="@color/black"
         android:layout_gravity="end"
         android:textSize="16sp" />
