--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,11 +1,10 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/yellow"
     tools:context=".onboarding.OnboardingActivity">
 
@@ -16,9 +15,10 @@
         android:text="@string/welcome"
         android:textSize="24sp"
         android:textColor="@color/black"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center_horizontal"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <TextView
         android:id="@+id/tvAppname"
@@ -28,46 +28,58 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/blue"
-        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="2dp"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:layout_constraintTop_toBottomOf="@id/tvAppname"
+        app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1" />
+        android:layout_marginBottom="16dp"/>
 
     <TextView
         android:id="@+id/tvSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Emotional Support Buddy"
+        android:text="@string/subtitle"
         android:textSize="18sp"
         android:textColor="#000000"
-        android:layout_gravity="center_horizontal"
+        app:layout_constraintBottom_toTopOf="@id/btnLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp"/>
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="246dp"
         android:layout_height="66dp"
-        android:layout_marginHorizontal="80dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/blue"
-        android:text="@string/login" />
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_non_transparent"
+        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/btnSignin"
         android:layout_width="246dp"
         android:layout_height="66dp"
-        android:layout_marginHorizontal="80dp"
-        android:layout_marginTop="16dp"
         android:text="@string/signin"
         android:textColor="@color/blue"
-        android:background="@drawable/btn_transparent"/>
+        android:background="@drawable/btn_transparent"
+        android:backgroundTint="@color/blue"
+        app:layout_constraintTop_toBottomOf="@id/btnLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <TextView
         android:id="@+id/tvStarted"
@@ -76,9 +88,8 @@
         android:text="@string/started"
         android:textSize="16sp"
         android:textColor="@color/blue"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="32dp"/>
-
-
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
