--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="pink">#FFD1E3</color>
     <color name="gray">#D3D3D3</color>
     <color name="dark_gray">#777777</color>
+    <color name="light_gray">#BBBBBB</color>
 </resources>
