--- a/app/src/main/res/drawable/chat_bg.xml
+++ b/app/src/main/res/drawable/chat_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/white"/>
+    <corners android:radius="20dp"/>
+    <solid android:color="@android:color/transparent"/>
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="@color/blue" />
     <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp"/>
 </shape>
