--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,6 +8,7 @@
         android:id="@+id/chatRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/sendMessageLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,32 +19,43 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/btn_transparent"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/chat_bg"
+        app:layout_constraintTop_toBottomOf="@+id/chatRecyclerView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
+        app:layout_constraintEnd_toStartOf="@id/button">
         <EditText
             android:id="@+id/messageInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="10dp"
             android:textColor="@color/black"
             android:hint="Write here..."
+            android:textColorHint="@color/blue"
             />
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/chatRecyclerView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
         <ImageButton
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/circle_background"
-            android:src="@drawable/send"
+            android:gravity="center"
+            android:background="@drawable/btn_send"
+            android:src="@drawable/send_baseline"
             android:layout_gravity="center"/>
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
