--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/home_inlier"  />
+        android:icon="@drawable/home"
+        />
     <item
         android:id="@+id/chat"
-        android:icon="@drawable/chat_inlier"/>
+        android:icon="@drawable/chat"
+        />
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/profil_inlier"/>
+        android:icon="@drawable/profil"
+        />
 </menu>
