--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/onboarding_image_5"
+        android:src="@drawable/onboarding_image_2"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,14 +30,14 @@
         android:id="@+id/credentialsLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/login_rectangle"
         android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/textView"
@@ -45,8 +45,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="10dp"
             android:text="@string/signin"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -57,6 +58,7 @@
             android:drawableStart="@drawable/idcard"
             android:drawablePadding="5dp"
             android:hint="@string/hint_name"
+            android:textColor="@color/black"
             android:inputType="textPersonName"
             android:paddingStart="20dp" />
 
@@ -68,6 +70,7 @@
             android:drawablePadding="5dp"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
+            android:textColor="@color/black"
             android:paddingStart="20dp" />
 
         <EditText
@@ -78,6 +81,7 @@
             android:drawablePadding="5dp"
             android:hint="@string/hint_pass"
             android:inputType="textPassword"
+            android:textColor="@color/black"
             android:paddingStart="20dp" />
 
 
@@ -87,8 +91,9 @@
             android:layout_height="66dp"
             android:layout_marginHorizontal="60dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
             android:backgroundTint="@color/blue"
+            android:layout_gravity="center"
             android:text="@string/signin"
             android:textColor="@color/white" />
 
