--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,16 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/circle_background"
             android:src="@drawable/baseline_dark_mode_24" />
+
+
+        <ImageButton
+            android:id="@+id/history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/circle_background"
+            android:src="@drawable/history_baseline" />
     </LinearLayout>
 
     <ScrollView
@@ -69,7 +79,6 @@
                 android:textStyle="bold"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="2dp"
                 />
 
             <TextView
