--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,11 +27,11 @@
             android:background="@drawable/circle_background"
             android:src="@drawable/baseline_dark_mode_24" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageViewProfile"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/profile_circle"
+            android:src="@drawable/picture"
         android:layout_gravity="center_horizontal"/>
 
         <TextView
