--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,19 +40,19 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/titleRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="10dp"
-            android:text="@string/signin"
+            android:text="@string/register"
             android:textColor="@color/blue"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:drawableStart="@drawable/idcard"
@@ -63,7 +63,7 @@
             android:paddingStart="20dp" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/emailInput"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:drawableStart="@drawable/baseline_email_24"
@@ -74,7 +74,7 @@
             android:paddingStart="20dp" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/passwordInput"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:drawableStart="@drawable/key_icon"
@@ -86,7 +86,7 @@
 
 
         <Button
-            android:id="@+id/signin_button"
+            android:id="@+id/registerBtn"
             android:layout_width="246dp"
             android:layout_height="66dp"
             android:layout_marginHorizontal="60dp"
@@ -94,7 +94,7 @@
             android:layout_marginBottom="32dp"
             android:backgroundTint="@color/blue"
             android:layout_gravity="center"
-            android:text="@string/signin"
+            android:text="@string/register"
             android:textColor="@color/white" />
 
     </LinearLayout>
